# spatialproteomics

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.html  external.html  genindex.html  image_container.html  index.html  label.html  labels.html  neighborhood.html  objects.inv  plot.html  preprocessing.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tool.html  tools.html  tutorials.html
.github/workflows/: branch.yaml  release.yaml
_sources/: external.rst.txt  image_container.rst  index.rst  index.rst.txt  labels.rst.txt  neighborhood.rst.txt  plot.rst.txt  preprocessing.rst.txt
_sources/notebooks/: CellTypePrediction.ipynb.txt  Customizability.ipynb.txt  DownstreamAnalysis.ipynb.txt  Example 1.ipynb.txt  Example 2.ipynb.txt  ExampleWorkflow.ipynb  ExampleWorkflow.ipynb.txt  ExampleWorkflowSpatialdata.ipynb  ExampleWorkflowSpatialdata.ipynb.txt  Exporting.ipynb.txt  Extracting.ipynb.txt  FAQ.ipynb  FAQ.ipynb.txt  Installation.ipynb  Installation.ipynb.txt  Interactivity.ipynb.txt  Interoperability.ipynb.txt  MultiTechnologyIntegration.ipynb  Neighborhoods.ipynb  Neighborhoods.ipynb.txt  Plotting.ipynb.txt  Segmentation.ipynb.txt  Slicing.ipynb  Slicing.ipynb.txt
_static/: documentation_options.js  style.css
codex_tools/: __init__.py  constants.py  container.py  image.py
docs/: api.rst  conf.py  external.rst  index.rst  label.rst  neighborhood.rst  plot.rst  preprocessing.rst  tool.rst  tools.rst
docs/notebooks/: CellTypePrediction.ipynb  DownstreamAnalysis.ipynb  ExampleWorkflow.ipynb  ExampleWorkflowSpatialdata.ipynb  Exporting.ipynb  Extracting.ipynb  FAQ.ipynb  Installation.ipynb  Interactivity.ipynb  Interoperability.ipynb  MultiTechnologyIntegration.ipynb  Neighborhoods.ipynb  Plotting.ipynb  Segmentation.ipynb  Slicing.ipynb
notebooks/: ArtifactRemoval.html  CellTypePrediction.html  CellTypePrediction.ipynb  Cropping.html  Customizability.html  Customizability.ipynb  DownstreamAnalysis.html  Example 1.html  Example 1.ipynb  Example 2.html  Example 2.ipynb  ExampleWorkflow.html  ExampleWorkflow.ipynb  ExampleWorkflowSpatialdata.html  ExampleWorkflowSpatialdata.ipynb  Exporting.html  Exporting.ipynb  Extracting.html  Extracting.ipynb  FAQ.html  ImageProcessing.html  ImageProcessing.ipynb  Installation.html  Installation.ipynb  Interactivity.html  Interactivity.ipynb  Interoperability.html  Interoperability.ipynb  MultiTechnologyIntegration.html  MultiTechnologyIntegration.ipynb  Neighborhoods.html  Neighborhoods.ipynb  Plotting.html  Plotting.ipynb  Segmentation.html  Segmentation.ipynb  Slicing.html  Slicing.ipynb
spatial_data/: __init__.py  constants.py  container.py  image.py  segmentation.py
spatial_data/ext/: __init__.py  external.py
spatial_data/im/: __init__.py  image.py
spatial_data/la/: __init__.py  label.py  utils.py
spatial_data/pl/: __init__.py  cmap.py  plot.py  spectra.py  utils.py
spatial_data/pp/: __init__.py  image.py  intensity.py  preprocessing.py  segmentation.py  transforms.py  utils.py
spatial_data/se/: __init__.py  helper.py  segmentation.py
spatial_data/tl/: gaussian.py
spatial_proteomics/pl/: plot.py
spatial_proteomics/pp/: __init__.py
spatialproteomics/: __init__.py  base_logger.py  constants.py  container.py
spatialproteomics/ext/: external.py
spatialproteomics/image_container/: ImageContainer.py  __init__.py
spatialproteomics/la/: __init__.py  label.py  utils.py
spatialproteomics/nh/: __init__.py  neighborhood.py  utils.py
spatialproteomics/pl/: __init__.py  plot.py  spectra.py  utils.py
spatialproteomics/pp/: __init__.py  intensity.py  preprocessing.py  utils.py
spatialproteomics/sd/: __init__.py  spatial_data.py  utils.py
spatialproteomics/tl/: __init__.py  tool.py  tools.py  utils.py
tests/: conftest.py  test_container.py  test_images.py  test_integration.py  test_labels.py  test_preprocessing.py  test_segmentation.py  test_to_zarr.py
tests/ext/: test_cellpose.py  test_ext.py
tests/image_container/: test_image_container.py
tests/la/: test_add_label_type.py  test_add_labels.py  test_format_labels.py  test_gate_label_type.py  test_label_getitem.py  test_label_properties.py  test_label_select_deselect.py  (+5 more)
(+763 files in other folders)
