[tool.poetry]
name = "spatialproteomics"
packages = [
    { include = "spatialproteomics" },
]
version = "0.6.9"
description = "spatialproteomics provides tools for the analysis of highly multiplexed immunofluorescence data"
readme = "README.md"
authors = ["Matthias Meyer-Bender", "Harald Vohringer"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cffi = "^1.15.0"
xarray = "^2023.0.0"
scikit-image = ">=0.19.3"
matplotlib = "^3.5.3"
tqdm = ">=4.64.0"
scikit-learn = "^1.2.2"
zarr = "^2.14.2"
numpy = "<2.0.0"
Sphinx = { version = "^7.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
nbsphinx = { version = "0.8.9", optional = true }
"sphinx-book-theme" = { version = "^0.0.39", optional = true }
sphinx-multiversion = { version = "^0.2.4", optional = true }
IPython = { version = "^8.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = { version = "^22.6.0", extras = ["jupyter"] }
isort = "^5.10.1"
flake8 = "^5.0.4"
bandit = "^1.7.4"
safety = "^2.1.1"
anndata = "^0.11"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-book-theme", "sphinxcontrib-napoleon", "nbsphinx", "sphinx-multiversion", "IPython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
