[project]
name = "spatialproteomics"
version = "0.7.6"
description = "Spatialproteomics is an interoperable toolbox for analyzing highly multiplexed fluorescence image data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="Matthias Meyer-Bender"},
    {name="Harald Vohringer"}
]
dependencies = [
    "cffi>=1.15.0",
    "xarray>=2024.0.0",
    "scikit-image>=0.25",
    "matplotlib>=3.8.0",
    "tqdm>=4.64.0",
    "scikit-learn>=1.4.2",
    "zarr>=2.0.0",
    "numpy>=1.23",
    "opencv-python>=4.11.0",
    "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spatialproteomics*"]


[project.optional-dependencies]
docs = [
    "Sphinx>=7.0.0",
    "sphinx-book-theme>=0.0.39",
    "sphinxcontrib-napoleon==0.7",
    "nbsphinx>=0.9",
    "sphinx-multiversion>=0.2.4",
    "IPython>=8.0.0",
]
spatialdata = ["spatialdata>=0.4.0"]
cellpose = ["cellpose>=3.1.0"]
stardist = ["stardist>=0.9.1"]
anndata = ["anndata"]
astir = ["astir>=0.1.5"]
dev = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "black[jupyter]>=22.6.0",
    "isort>=5.10.1",
    "flake8>=5.0.4",
    "bandit>=1.7.4",
    "safety>=2.1.1",
]
all = ["spatialdata", "cellpose", "stardist", "astir"]

[build-system]
requires = ["setuptools>=61.0,<81.0"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 120
exclude = '/(\.venv|build|dist|data|.*\.tif|.*\.tiff|.*\.h5|.*\.zarr)/'


[tool.isort]
profile = "black"
skip = ["data", "build", "dist"]
skip_glob = [".venv/*", "*.tif", "*.tiff", "*.h5", "*.zarr", ".venv", "build", "dist", "data", ".git", "__pycache__"]